--- a/vision/#1 - Data Collection & PreProcessing/demo.ipynb
+++ b/vision/#1 - Data Collection & PreProcessing/demo.ipynb
@@ -2,148 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "# from tqdm import tqdm\n",
-    "from glob import glob\n",
-    "import pandas as pd\n",
-    "from xml.etree import ElementTree as et\n",
-    "from functools import reduce\n",
-    "from shutil import move\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tree = et.parse('test.xml')\n",
-    "root = tree.getroot()\n",
-    "# Get Name Image, Width, Height\n",
-    "image_name = root.find('filename').text\n",
-    "width = root.find('size').find('width').text\n",
-    "height = root.find('size').find('height').text\n",
-    "\n",
-    "# Get Objects, Bounding Box\n",
-    "objs = root.findall('object')\n",
-    "parser = []\n",
-    "for obj in objs:\n",
-    "    name = obj.find('name').text\n",
-    "    bndbox = obj.find('bndbox')\n",
-    "    xmin = bndbox.find('xmin').text\n",
-    "    xmax = bndbox.find('xmax').text\n",
-    "    ymin = bndbox.find('ymin').text\n",
-    "    ymax = bndbox.find('ymax').text\n",
-    "    parser.append([image_name, width, height, name, xmin, xmax, ymin, ymax])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['chlorotic-and-drying-of-leaves_jpg.rf.ded356f6a70cb5b5cf7c7518664bec05.jpg',\n",
-       "  '640',\n",
-       "  '640',\n",
-       "  'Early_blight',\n",
-       "  '239',\n",
-       "  '433',\n",
-       "  '176',\n",
-       "  '416']]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parser"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Convert_coordinates(width, height, xmin, xmax, ymin, ymax):\n",
-    "    '''\n",
-    "    Functionality of this function Converts bounding box coordinates (xmin, xmax, ymin, ymax)\n",
-    "    to normalized center coordinates (x_center, y_center) and relative width/height.\n",
-    "    Returns:\n",
-    "        x_center, y_center, new_width, new_height (all normalized to [0, 1])\n",
-    "    '''\n",
-    "    new_width = (xmax - xmin) / width\n",
-    "    new_height = (ymax - ymin) / height\n",
-    "    x_center = (xmin / width) + (new_width / 2)\n",
-    "    y_center = (ymin / height) + (new_height / 2)\n",
-    "\n",
-    "    return x_center , y_center , new_width , new_height"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.5249999999999999, 0.4625, 0.303125, 0.375)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Convert_coordinates(640 , 640 , 239 , 433 , 176 , 416)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "\n",
-    "x_center, y_center, width_norm, height_norm = 0.5249999999999999, 0.4625, 0.303125, 0.375\n",
-    "\n",
-    "image = cv2.imread('test.jpg')  \n",
-    "img_height, img_width = image.shape[:2]  \n",
-    "\n",
-    "xmin = int((x_center - width_norm / 2) * img_width)\n",
-    "xmax = int((x_center + width_norm / 2) * img_width)\n",
-    "ymin = int((y_center - height_norm / 2) * img_height)\n",
-    "ymax = int((y_center + height_norm / 2) * img_height)\n",
-    "\n",
-    "color = (255,0, 0)  \n",
-    "thickness = 2  \n",
-    "cv2.rectangle(image, (xmin, ymin), (xmax, ymax), color, thickness)\n",
-    "\n",
-    "cv2.imshow('Image with Bounding Box', image)\n",
-    "cv2.waitKey(0) \n",
-    "cv2.destroyAllWindows()"
+    "class_id = {\n",
+    "    'Bell_pepper leaf spot': 1,\n",
+    "    'Potato leaf early blight': 2,\n",
+    "    'Strawberry leaf': 3,\n",
+    "    'grape leaf': 4,\n",
+    "    'grape leaf black rot': 5,\n",
+    "    'Tomato leaf': 6,\n",
+    "    'Bell_pepper leaf': 7,\n",
+    "    'Potato leaf': 8,\n",
+    "    'Peach leaf': 9,\n",
+    "    'Corn leaf blight': 10,\n",
+    "    'Apple Scab Leaf': 11,\n",
+    "    'Cherry leaf': 12,\n",
+    "    'Tomato leaf bacterial spot': 13,\n",
+    "    'Tomato leaf yellow virus': 14,\n",
+    "    'Corn Gray leaf spot': 15,\n",
+    "    'Apple rust leaf': 16,\n",
+    "    'Raspberry leaf': 17,\n",
+    "    'Blueberry leaf': 18,\n",
+    "    'Squash Powdery mildew leaf': 19,\n",
+    "    'Tomato mold leaf': 20,\n",
+    "    'Tomato Early blight leaf': 21,\n",
+    "    'Tomato leaf late blight': 22,\n",
+    "    'Tomato Septoria leaf spot': 23,\n",
+    "    'Tomato leaf mosaic virus': 24,\n",
+    "    'Potato leaf late blight': 25,\n",
+    "    'Apple leaf': 26,\n",
+    "    'Corn rust leaf': 27,\n",
+    "    'Soyabean leaf': 28,\n",
+    "    'Tomato two spotted spider mites leaf': 29\n",
+    "}"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
